genshin icons + phone scaling

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sloty</title>
+    <title>Fontaine Lottery</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/x-icon" href="https://static.wikia.nocookie.net/genshin/images/4/4a/Site-favicon.ico/revision/latest?cb=20220510203246&amp;path-prefix=uk">
     <script src="./script.js" defer></script>
 </head>
 <body>
