--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+<div class="header-uid">м****з <br> UID:832575794</div>
+<div class="header-icons">
+    <img src="icons/language.png" alt="Language" class="header-icon" />
+    <img src="icons/download.png" alt="Download" class="header-icon" />
+    <img src="icons/question.png" alt="Question" class="header-icon" />
+    <img src="icons/share.png" alt="Share" class="header-icon" />
+</div>
 
 <div id="container">
     <div class="window-border">
@@ -25,11 +32,16 @@
                 <div class="col"></div>
             </div>
             <div class="outer-spacer"></div>
+            
         </div>
     </div>
 
     <input type="button" onclick="spin(this)" class="start-button" value="Spin"/>
 </div>
 
+<footer class="footer-bar">
+    <div class="footer-left">Privacy Policy | Terms of Service</div>
+    <div class="footer-right">Copyright © COGNOSPHERE. All Rights Reserved.</div>
+</footer>
 </body>
 </html>
